# DjangoStockPOC

./: pyproject.toml
.github/workflows/: main.yml
