[tool.poetry]
name = "djangostockpoc"
version = "0.1.0"
description = "A django application to display stock price"
authors = ["girisagar46"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
Django = "^3.2.8"
django-filter = "^21.1"
requests = "^2.26.0"
drf-yasg = "^1.20.0"
django-environ = "^0.8.1"
django-bootstrap-form = "^3.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
